# crewai-series

./: README.md
day_01/: README.md  pyproject.toml
day_01/src/day_01/: crew.py  main.py
day_01/src/day_01/config/: tasks.yaml
day_01_old/: pyproject.toml  requirements.txt
day_01_old/src/day_01/: crew.py
day_01_old/src/day_01/config/: agents.yaml
day_02/: pyproject.toml
day_02/src/day_02/: crew.py  main.py
day_02/src/day_02/config/: agents.yaml  tasks.yaml
day_03/src/day_03/: Judge-Ryan.md  JudgeJohnson.md  crew.py  katie.md  main.py
day_04/src/day_04/: crew.py  main.py  news.md
day_05/: pyproject.toml
day_05/src/day_05/: crew.py  main.py
day_05/src/day_05/tools/: custom_tool.py
day_06/src/day_06/: crew.py  report.md
day_07/src/day_07/: automated_news_flow.html  crew.py  report.md
day_07/src/day_07/ainews/: AI_Safety_Concerns_and_National_Security.md_20241024_171258.md  Generative_AI_Art_News_Report.md_20241024_125710.md  Generative_AI_Models_News_Report.md_20241024_171049.md  Generative_AI_Report.md_20241024_170650.md  foundation_models_news_report.md_20241024_170838.md  generative_ai_developments.md_20241024_171522.md
day_07/src/day_07/config/: tasks.yaml
