[tool.poetry]
name = "day_01"
version = "0.1.0"
description = "day-01 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
day_01 = "day_01.main:run"
run_crew = "day_01.main:run"
train = "day_01.main:train"
replay = "day_01.main:replay"
test = "day_01.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
